@@ -2,7 +2,9 @@ package com.spring.jwt.service.impl;
 
 import com.spring.jwt.dto.FeedbackRequestDto;
 import com.spring.jwt.dto.FeedbackResponseDto;
+import com.spring.jwt.entity.Business;
 import com.spring.jwt.entity.Feedback;
+import com.spring.jwt.repository.BusinessRepository;
 import com.spring.jwt.repository.FeedbackRepository;
 import com.spring.jwt.service.FeedbackService;
 import lombok.RequiredArgsConstructor;
@@ -10,26 +12,26 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class FeedbackServiceImpl implements FeedbackService {
 
     private final FeedbackRepository feedbackRepository;
+    private final BusinessRepository businessRepository;
 
     @Override
     public FeedbackResponseDto saveFeedback(FeedbackRequestDto request) {
 
-        // ⭐ Prevent duplicate feedback
-        if (feedbackRepository.existsByEmailAndBusinessId(
-                request.getEmail(), request.getBusinessId())) {
+        // Convert Integer → Integer (Business API safe)
+        Integer businessId = request.getBusinessId();
 
+        Business business = businessRepository.findById(businessId)
+                .orElseThrow(() -> new RuntimeException("Business not found"));
+
+        if (feedbackRepository.existsByEmailAndBusiness(request.getEmail(), business)) {
             throw new RuntimeException("Feedback already submitted");
-        }
-
-        // ⭐ Rating validation
-        if (request.getRating() < 1 || request.getRating() > 5) {
-            throw new RuntimeException("Rating must be between 1-5");
         }
 
         Feedback feedback = Feedback.builder()
@@ -37,46 +39,44 @@ public class FeedbackServiceImpl implements FeedbackService {
                 .email(request.getEmail())
                 .message(request.getMessage())
                 .rating(request.getRating())
-                .businessId(request.getBusinessId())
                 .createdAt(LocalDateTime.now())
+                .business(business)
                 .build();
 
         feedbackRepository.save(feedback);
 
-        return FeedbackResponseDto.builder()
-                .id(feedback.getId())
-                .message("Feedback saved successfully")
-                .createdAt(feedback.getCreatedAt())
-                .build();
+        return mapToDto(feedback);
     }
 
     @Override
     public List<FeedbackResponseDto> getAllFeedback() {
-
-        return feedbackRepository.findAll().stream()
-                .map(f -> FeedbackResponseDto.builder()
-                        .id(f.getId())
-                        .message(f.getMessage())
-                        .createdAt(f.getCreatedAt())
-                        .build())
-                .toList();
+        return feedbackRepository.findAll()
+                .stream()
+                .map(this::mapToDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     public FeedbackResponseDto getFeedbackById(Long id) {
-
         Feedback feedback = feedbackRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Feedback not found"));
-
-        return FeedbackResponseDto.builder()
-                .id(feedback.getId())
-                .message(feedback.getMessage())
-                .createdAt(feedback.getCreatedAt())
-                .build();
+        return mapToDto(feedback);
     }
 
     @Override
     public void deleteFeedback(Long id) {
         feedbackRepository.deleteById(id);
+    }
+
+    private FeedbackResponseDto mapToDto(Feedback f) {
+        return FeedbackResponseDto.builder()
+                .id(f.getId())
+                .name(f.getName())
+                .email(f.getEmail())
+                .message(f.getMessage())
+                .rating(f.getRating())
+                .createdAt(f.getCreatedAt())
+                .businessId(f.getBusiness() != null ? f.getBusiness().getBusinessId() : null)
+                .build();
     }
 }
